--- a/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/es/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-08 08:07+0300\n"
+"POT-Creation-Date: 2016-03-08 08:37+0300\n"
 "PO-Revision-Date: 2016-03-07 19:08+0100\n"
 "Last-Translator: Benedetta Facchinetti <zoidberglupin@gmail.com>\n"
 "Language-Team: Spanish\n"
@@ -86,9 +86,10 @@ msgid ""
 "want to have some fun? Rand Talk will help you! It's a bot matching you with "
 "a random stranger of desired sex speaking on your language. {0}"
 msgstr ""
-"¿Quieres hablar con alguien, ejercerte en otras lenguas o quieres divertirte "
-"solamente? ¡Rand Talk hace a tu caso! ¡Seréis juntados con una persona del "
-"sexo elegida por vosotros en la lengua que deseáis! {0}"
+"¿Quieres[ ](http://randtalk.ml/static/img/logo-125x125.png) hablar con "
+"alguien, ejercerte en otras lenguas o quieres divertirte solamente? ¡Rand "
+"Talk hace a tu caso! ¡Seréis juntados con una persona del sexo elegida por "
+"vosotros en la lengua que deseáis! [Intentalo!]({0})"
 
 #: randtalkbot/stranger.py:147
 msgid "Looking for partner was stopped."
@@ -215,8 +216,10 @@ msgstr ""
 "Si tienes sugerencias o necesitas ayuda incluso escribes al admin del bot, "
 "@quasiyoke. En el mensaje, por favor, incluyes este número: {0}.\n"
 "\n"
-"Eres la bienvenida para controlar y mejorar [el código naciente del Rand "
-"Talk v. {1}](https://github.com/quasiyoke/RandTalkBot)."
+"Suscríbete a [nuestras noticias (en)](https://telegram.me/RandTalk). Eres la "
+"bienvenida para controlar y mejorar [el código naciente del Rand Talk v. {1}]"
+"(https://github.com/quasiyoke/RandTalkBot) o [para darnos 5 estrellas]"
+"(https://telegram.me/storebot?start=randtalkbot)."
 
 #: randtalkbot/stranger_handler.py:111
 msgid "Notifications about bonuses were muted for 1 hour"
